# hubauth

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile.build  Justfile  Makefile  Makefile.am  Makefile.in  README.md  TODO.md  Vagrantfile  build.rs  configure.ac  dev  docker  hubauth.spec.in
.rpm/: .gitignore  hubauth.spec
debian/: changelog  control  copyright  hubauth.doc-base.EX  manpage.1.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: .gitignore  dev  hubauth.1.md  hubauth.1.ronn  hubauth.yml.5.md  hubauth.yml.5.ronn  hubauth.yml.example  mod.rs
doc/man/: cli.rs  config.rs  mod.rs
hubauth/: Cargo.toml
hubauth/src/: fetch.rs  lib.rs  main.rs  models.rs
hubauth/src/cli/: configuration.rs  constants.rs  model.rs
hubauth/src/cli/commands/: cached.rs  fetch.rs  init.rs  list.rs  mod.rs  sync.rs
hubauth/tests/: cli_net.rs
hubauth/tests/cli_helper/: mod.rs
hubauth/tests/fixtures/invalid_username/: stderr.txt
hubauth/tests/fixtures/simple_url/: hubauth.yml
misc/: hubauth.dev.yml
misc/vagrant/: machine-config.sh  user-config.sh
nom_unix_username/: Cargo.toml
scripts/: mkall  mkdeb  mkdoc  mkrpm  mktar  postinst  preinst  test
scripts/debian/: postinst
src/: bin_constants.rs  cli.rs  cli.yml  configuration.rs  fetch.rs  fs_cache.rs  lib.rs  main.rs  models.rs
src/cli/: configuration.rs  constants.rs  mod.rs  model.rs
src/cli/commands/: cached.rs  fetch.rs  init.rs  list.rs  mod.rs  sync.rs
src/commands/: cached.rs  fetch.rs  mod.rs
ssh_authorized_keys/: Cargo.toml
ssh_authorized_keys/src/: algs.rs  lib.rs  v2.rs
ssh_pub_key/: Cargo.toml
ssh_pub_key/src/: lib.rs
tests/: cli_general.rs  cli_net.rs  help.rs
tests/cli_helper/: mod.rs
tests/fixtures/simple_url_config/: stdout.txt
unix_username/: Cargo.toml
unix_username/src/: lib.rs
