[package]
name = "hubauth"
version = "0.190327.0"
license = "MIT OR Apache-2.0"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
description = "Dynamically use remote sources for SSH user's authorized_keys, handling network unavailability via caching."
homepage = ""
repository = "https://github.com/liamdawson/hubauth"
readme = "README.md"
keywords = ["ssh", "cli", "authorized_keys"]
categories = ["command-line-utilities"]

[dependencies]
config = { version = "0.9", default-features = false, features = ["yaml"]}
sha2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.1"
reqwest = "0.9"
retry = "0.4"
rayon = "1.0"
structopt = "0.2"

[dev-dependencies]
mockito = "0.16"

[badges]
travis-ci = { repository = "liamdawson/hubauth" }
is-it-maintained-issue-resolution = { repository = "liamdawson/hubauth" }
is-it-maintained-open-issues = { repository = "liamdawson/hubauth" }
maintenance = { status = "experimental" }
