[package]
name = "hubauth"
version = "0.20190327.0"
license = "MIT OR Apache-2.0"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
description = "Dynamically use remote sources for SSH user's authorized_keys, handling network unavailability via caching."
homepage = ""
repository = "https://github.com/liamdawson/hubauth"
readme = "README.md"
keywords = ["ssh", "cli", "authorized_keys"]
categories = ["command-line-utilities"]

[dependencies]
config = { version = "0.9.2", default-features = false, features = ["yaml"] }
sha2 = "0.8.0"
serde = { version = "1.0.90", features = ["derive"] }
regex = "1.1.5"
retry = "0.4.0"
rayon = "1.0.3"
nom = "4.2.3"
gumdrop = { git = "https://github.com/murarth/gumdrop.git", rev = "121667e873e8e9b5fed3d0f180978e59ac899bc9" }
chttp = { version = "0.4.2", default-features = false, features = ["http2"] }

[dev-dependencies]
mockito = "0.17.0"

[badges]
travis-ci = { repository = "liamdawson/hubauth" }
is-it-maintained-issue-resolution = { repository = "liamdawson/hubauth" }
is-it-maintained-open-issues = { repository = "liamdawson/hubauth" }
maintenance = { status = "experimental" }
